# ms-mint-app

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: codeql.yml  docker-image.yml  documentation.yml  macos-release.yml  pythonpackage.yml  pythonpublish.yml  windows-release.yml
InnoSetup/: InnoSetupScript.iss
background/: index.html
developer-notes/: index.html
docker/: index.html
docs/: developer-notes.md  gui.md  index.md  install.md  quickstart.md  targets.md
flaskapp/app/: flaskapp.py  webapp.py
flaskapp/app/templates/: base.html  index.html  login.html  register.html
gallery/: index.html
gui/: index.html
install/: index.html
jupyter/: index.html
ms_mint_app/: __init__.py  add_metab.py  analysis.py  app.py  distributions.py  heatmap.py  hierachical_clustering.py  messages.py  metadata.py  ms_files.py  pca.py  peak_optimization.py  plotting.py  plugin_interface.py  plugin_manager.py  processing.py  quality_control.py  targets.py  tools.py  workspaces.py
ms_mint_app/plugins/: add_metabolites.py  analysis.py  metadata.py  ms_files.py  processing.py  quality_control.py  target_optimization.py  targets.py  workspaces.py
ms_mint_app/plugins/analysis_tools/: distributions.py  heatmap.py  hierachical_clustering.py  pca.py  plotting.py
peak-detection/: index.html
pyinstaller/: Mint.spec
pyinstaller/hooks/: hook-ms_mint.py  hook-ms_mint_app.py  hook-pyarrow.py  hook-pymzml.py
python/: index.html
quickstart/: index.html
scripts/: Mint.py
search/: search_index.json
specfiles/: Mint.spec
src/ms_mint_app/: app.py  tools.py
targets/: index.html
tests/: test__startapp.py  test__tools.py
(+5 files in other folders)
